<resources>
    <!-- General strings -->
    <string name="app_name">CineHub</string>
    <string name="desc_login_logo">Logo of app</string>
    <!-- Login strings -->
    <string name="hint_login_et_mail">Email</string>
    <string name="hint_login_et_password">Password</string>
    <string name="button_login_now">Sign In</string>
    <string name="label_login_et_notaccount">No account yet?</string>
    <string name="notification_login_error_email">Email is not valid</string>
    <string name="notification_login_error_password">Password is not valid</string>
    <!-- Register strings -->
    <string name="hint_register_et_mail">Email</string>
    <string name="hint_register_et_cpasswd">Confirm your password</string>
    <string name="hint_register_et_username">Nickname</string>
    <string name="button_register_now">Sign Up</string>
    <string name="notification_register_error_username">Username is not valid</string>
    <string name="notification_register_error_email">Email is not valid</string>
    <string name="notification_register_error_password">Password is not matching</string>
    <string name="notification_register_error_password_sec">Password is not secure</string>
    <!-- Room selection strings -->
    <string name="label_room_name">Room %1$d</string>
    <string name="title_seat_selection">Choose the seats</string>
    <string name="label_seat_placement">%1$d - %2$d</string>
    <string name="label_seat_placement_detail">row: %1$d - column: %2$d</string>
    <string name="label_screen_indicator">Screen</string>
    <!-- Summary strings -->
    <string name="title_summary">Booking overview</string>
    <string name="label_summary_subtitle">Almost done!</string>
    <string name="label_booking_date">Date</string>
    <string name="label_booking_hour">Time</string>
    <string name="label_booking_room">Room</string>
    <string name="label_booking_seat">%1$d seats</string>
    <string name="label_booking_seat_dat">Row %1$d, Seat %2$d</string>
    <string name="label_booking_price">Price</string>
    <string name="label_booking_price_dat">%1$.2f€</string>
    <string name="action_booking_confirmation">Buy tickets</string>
    <!-- BillBoard Activity Strings-->
    <string name="title_billboard_tv_title">Select your favorite movie</string>
    <string name="title_home">Welcome %1$s</string>
    <string name="label_home_sub">You have booked %1$d reservations</string>
    <!-- Home activity strings -->
    <string name="msg_empty_booking">You don\'t have any tickets yet.</string>
    <string name="error_login">User or password incorrect</string>
    <string name="error_email">Incorrect email</string>
    <string name="button_go_to_home">Return home</string>
    <string name="show_code_cinema">Show this entry code at the cinema</string>
    <string name="what_movie">What movie do you want to see?</string>
    <string name="wellcome">Wellcome to Cinehub</string>
    <string name="reservation_success">Reservation made scucessfully!</string>
    <string name="btn_buy_now">Buy Now - %1$s</string>
    <string name="greeting_username">Hello %1$s!</string>
</resources>