<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/st_gradient_with_image"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_basic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_login_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="50dp"
        android:gravity="center">

        <EditText style="@style/login_input_text"
            android:id="@+id/etEmail"
            android:hint="@string/hint_login_et_mail"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText style="@style/login_input_text"
            android:id="@+id/etPasswd"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_login_et_password"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button style="@style/primary_button"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            app:backgroundTint="#FE0000"
            android:text="@string/button_login_now" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvNotAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_login_et_notaccount"
            android:textColor="@color/white"
            android:textSize="@dimen/std_txtsize" />

        <Button style="@style/secondary_button"
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:backgroundTint="#FE0000"
            android:text="@string/button_register_now" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>