<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".BookingSummaryActivity">

    <TextView
        android:id="@+id/tvSummaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSummarySubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_summary_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSummaryTitle" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnSummaryConfirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSummarySubtitle">

        <TextView
            android:id="@+id/tvSummaryMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tvSummaryDateLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_booking_date"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/tvSummaryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/tvSummaryTimeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_booking_hour"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/tvSummaryTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/tvSummaryRoomLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_booking_room"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/tvSummaryRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/tvSummarySeatLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_booking_seat"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/tvSummarySeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:constraint_referenced_ids="tvSummaryDateLbl,tvSummaryDate,tvSummaryTimeLbl,tvSummaryTime,tvSummaryRoomLbl,tvSummaryRoom,tvSummarySeatLbl,tvSummarySeat"
                app:flow_maxElementsWrap="2"
                app:flow_wrapMode="aligned"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSummaryPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/label_booking_price_dat"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/btnSummaryConfirmation"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSummaryConfirmation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_booking_confirmation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSummaryPriceLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/label_booking_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/tvSummaryPrice"
        app:layout_constraintEnd_toEndOf="@+id/tvSummaryPrice"
        app:layout_constraintStart_toStartOf="@+id/tvSummaryPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>